--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                             <i class="fas fa-bullseye"></i>
                         </div>
                         <h3>Missão</h3>
-                        <p>Fornecer soluções tecnológicas inovadoras e eficientes que agreguem valor aos nossos clientes, contribuindo para o crescimento de seus negócios.</p>
+                        <p>Prover soluções de tecnologia da informação e automação que elevem a eficiência operacional e a segurança dos nossos clientes.</p>
                     </div>
 
                     <!-- Visão -->
@@ -167,7 +167,7 @@
                             <i class="fas fa-eye"></i>
                         </div>
                         <h3>Visão</h3>
-                        <p>Ser reconhecida como referência em soluções de TI na região, destacando-se pela qualidade, inovação e comprometimento com nossos clientes.</p>
+                        <p>Ser referência em soluções completas de TI e automação, reconhecida pela qualidade técnica e inovação contínua.</p>
                     </div>
 
                     <!-- Valores -->
