--- a/index.html
+++ b/index.html
@@ -109,7 +109,6 @@
         </div>
 
         <div class="sobre-content">
-            <!-- TEXTO -->
             <div class="sobre-text">
                 <p class="lead">
                     A CRV - Soluções em TI nasceu da união de três amigos apaixonados por tecnologia, com o objetivo de oferecer serviços de TI de alta qualidade para empresas que buscam excelência e confiabilidade.
@@ -117,9 +116,27 @@
                 <p>
                     Nossa missão é simplificar a tecnologia para nossos clientes, oferecendo soluções personalizadas que atendam às necessidades específicas de cada negócio. Com expertise em manutenção, configuração e aluguel de equipamentos, somos o parceiro ideal para sua empresa crescer com segurança tecnológica.
                 </p>
+
+                <!-- Stats -->
+                <div class="sobre-stats">
+                    <div class="stat-item">
+                        <i class="fas fa-award"></i>
+                        <h3>5+</h3>
+                        <p>Anos de Experiência</p>
+                    </div>
+                    <div class="stat-item">
+                        <i class="fas fa-users"></i>
+                        <h3>50+</h3>
+                        <p>Clientes Satisfeitos</p>
+                    </div>
+                    <div class="stat-item">
+                        <i class="fas fa-project-diagram"></i>
+                        <h3>100+</h3>
+                        <p>Projetos Entregues</p>
+                    </div>
+                </div>
             </div>
 
-            <!-- IMAGENS -->
             <div class="sobre-images">
                 <div class="image-grid">
                     <img src="assets/imagens/ft_socios.jpeg" alt="Equipe CRV" class="img-main">
@@ -130,29 +147,7 @@
                     </div>
                 </div>
             </div>
-
-            <!-- STATS (MOVIDO PARA CÁ) -->
-            <div class="sobre-stats">
-                <div class="stat-item">
-                    <i class="fas fa-award"></i>
-                    <h3>5+</h3>
-                    <p>Anos de Experiência</p>
-                </div>
-                <div class="stat-item">
-                    <i class="fas fa-users"></i>
-                    <h3>50+</h3>
-                    <p>Clientes Satisfeitos</p>
-                </div>
-                <div class="stat-item">
-                    <i class="fas fa-project-diagram"></i>
-                    <h3>100+</h3>
-                    <p>Projetos Entregues</p>
-                </div>
-            </div>
         </div>
-    </div>
-</section>
-
 
             <!-- Missão, Visão, Valores + Por que CRV -->
             <div style="margin-top: 80px;">
@@ -214,6 +209,7 @@
                 </div>
             </div>
         </div>
+    </section>
 
     <!-- SERVIÇOS (FUNDO CLARO - fundo2.png) -->
     <section id="servicos" class="secao-clara" style="background-image: url('assets/imagens/fundo2.png');">
