--- a/index.html
+++ b/index.html
@@ -152,6 +152,8 @@
             </div>
         </div>
     </div>
+</section>
+
 
     <!-- SERVIÇOS (FUNDO CLARO - fundo2.png) -->
     <section id="servicos" class="secao-clara" style="background-image: url('assets/imagens/fundo2.png');">
