--- a/index.html
+++ b/index.html
@@ -117,27 +117,25 @@
                     Nossa missão é simplificar a tecnologia para nossos clientes, oferecendo soluções personalizadas que atendam às necessidades específicas de cada negócio. Com expertise em manutenção, configuração e aluguel de equipamentos, somos o parceiro ideal para sua empresa crescer com segurança tecnológica.
                 </p>
 
-                <!-- Stats -->
-                <div class="sobre-stats">
-                    <div class="stat-item">
-                        <i class="fas fa-award"></i>
-                        <h3>5+</h3>
-                        <p>Anos de Experiência</p>
-                    </div>
+<div class="sobre-stats">
+    <div class="stat-item">
+        <i class="fas fa-cogs"></i>
+        <h3>Automação & TI</h3>
+        <p>Soluções práticas para empresas modernas</p>
+    </div>
 
-                    <div class="stat-item">
-                        <i class="fas fa-users"></i>
-                        <h3>50+</h3>
-                        <p>Clientes Satisfeitos</p>
-                    </div>
+    <div class="stat-item">
+        <i class="fas fa-lightbulb"></i>
+        <h3>Gestão de Tecnologia</h3>
+        <p>Processos organizados e visão estratégica</p>
+    </div>
 
-                    <div class="stat-item">
-                        <i class="fas fa-project-diagram"></i>
-                        <h3>100+</h3>
-                        <p>Projetos Entregues</p>
-                    </div>
-                </div>
-            </div>
+    <div class="stat-item">
+        <i class="fas fa-handshake"></i>
+        <h3>Sob Medida</h3>
+        <p>Atendimento próximo e soluções personalizadas</p>
+    </div>
+</div>
 
             <div class="sobre-images">
                 <div class="image-grid">
