Revert "update html"
This reverts commit 0640709d3664e1c03732e6266ff68f71ac45eb69.

--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
                         <li><i class="fas fa-check-circle"></i> ERP e CRM personalizados</li>
                         <li><i class="fas fa-check-circle"></i> Automação de processos</li>
                         <li><i class="fas fa-check-circle"></i> Dashboards e relatórios</li>
+                        <li><i class="fas fa-check-circle"></i> Integração com sistemas legados</li>
                     </ul>
                     <button class="btn-cta btn-servico" data-servico="sistemas">
                         <i class="fas fa-paper-plane"></i> Solicitar Orçamento
