--- a/index.html
+++ b/index.html
@@ -3,18 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CRV - Soluções em TI | Transformando Tecnologia em Resultados</title>
+
+    <!-- SEO -->
+    <title>CRV Soluções em TI | Sistemas, Sites e Automação</title>
     <meta name="description" content="Especialistas em desenvolvimento de sites, sistemas e manutenção de TI em Tatuí/SP. Soluções tecnológicas completas para sua empresa.">
+    <link rel="canonical" href="https://crvsolucoesti.com/">
+    <meta name="author" content="CRV Soluções em TI">
+
+    <!-- Open Graph / Prévia de Compartilhamento -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="CRV Soluções em TI">
+    <meta property="og:description" content="Soluções em Tecnologia da Informação, sistemas, sites e automações sob medida.">
+    <meta property="og:url" content="https://crvsolucoesti.com/">
+    <meta property="og:image" content="https://crvsolucoesti.com/assets/imagens/logo_oficial_sem_fundo.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="CRV Soluções em TI">
+    <meta name="twitter:description" content="Soluções em TI, sistemas, sites e automações sob medida.">
+    <meta name="twitter:image" content="https://crvsolucoesti.com/assets/imagens/logo_oficial_sem_fundo.png">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="assets/imagens/favicon.png">
+    <link rel="icon" type="image/png" href="assets/imagens/favicon.ico">
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/main.css">
+
+    <!-- Google Analytics (GA4) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8164MK5R26"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-8164MK5R26');
+    </script>
 </head>
+
 <body>
 
     <!-- HEADER -->
@@ -40,7 +70,9 @@
 
             <!-- Header Actions -->
             <div class="header-actions">
-                <a href="https://wa.me/5515997021387" target="_blank" class="btn-primary">
+                <a href="https://wa.me/5515997021387?text=Ol%C3%A1%21%20Vim%20pelo%20site%20da%20CRV%20Solu%C3%A7%C3%B5es%20em%20TI%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20seus%20servi%C3%A7os."
+                   target="_blank"
+                   class="btn-primary">
                     <i class="fab fa-whatsapp"></i> WhatsApp
                 </a>
             </div>
@@ -63,7 +95,9 @@
                 <li><a href="#contato" class="nav-mobile-link"><i class="fas fa-envelope"></i> Contato</a></li>
             </ul>
             <div class="nav-mobile-actions">
-                <a href="https://wa.me/5515997021387" target="_blank" class="btn-primary btn-mobile">
+                <a href="https://wa.me/5515997021387?text=Ol%C3%A1%21%20Vim%20pelo%20site%20da%20CRV%20Solu%C3%A7%C3%B5es%20em%20TI%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20seus%20servi%C3%A7os."
+                   target="_blank"
+                   class="btn-primary btn-mobile">
                     <i class="fab fa-whatsapp"></i> Falar no WhatsApp
                 </a>
             </div>
@@ -523,9 +557,13 @@
     </footer>
 
     <!-- WHATSAPP FLUTUANTE -->
-    <a href="https://wa.me/5515997021387" target="_blank" class="whatsapp-float" aria-label="WhatsApp">
+    <a href="https://wa.me/5515997021387?text=Ol%C3%A1%21%20Vim%20pelo%20site%20da%20CRV%20Solu%C3%A7%C3%B5es%20em%20TI%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20seus%20servi%C3%A7os."
+       target="_blank"
+       class="whatsapp-float"
+       aria-label="WhatsApp">
         <i class="fab fa-whatsapp"></i>
     </a>
+
 
     <!-- MODAL GOOGLE FORMS -->
     <div class="modal" id="modalServico">
