--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
                                         <i class="fab fa-instagram"></i>
                                         <span>Instagram</span>
                                     </a>
-                                    <a href="https://facebook.com/crv" target="_blank" class="social-btn-phone facebook">
+                                    <a href="https://www.facebook.com/people/CRV-Solu%C3%A7%C3%B5es-em-TI/61586548753603/" target="_blank" class="social-btn-phone facebook">
                                         <i class="fab fa-facebook-f"></i>
                                         <span>Facebook</span>
                                     </a>
