update hero subtitle

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <h1 class="hero-title">
                 Transformando <span class="text-highlight">Tecnologia</span> em Resultados
             </h1>
-            <p class="hero-subtitle"><strong>Soluções em TI que Impulsionam seu Negócio</strong></p>
+            <p class="hero-subtitle">Soluções em TI que Impulsionam seu Negócio</p>
             <p class="hero-text">
                 Especialistas em desenvolvimento de sites, sistemas personalizados e infraestrutura de TI.
                 Oferecemos soluções completas para empresas que buscam excelência tecnológica.
