up projetos ishizava desenvolvimento -> concluido

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                         </div>
                     </div>
                     <div class="projeto-info">
-                        <span class="projeto-badge desenvolvimento">Em Desenvolvimento</span>
+                        <span class="projeto-badge lancado">Concluído</span>
                         <h3>Site Clínica Ishizava - Dor Crônica</h3>
                         <p>Website profissional para clínica especializada em tratamento de dor crônica em Tatuí, com agendamento online via WhatsApp e apresentação de serviços médicos.</p>
                         <div class="projeto-tags">
