--- a/index.html
+++ b/index.html
@@ -446,42 +446,44 @@
             <div class="contato-wrapper">
                 <!-- COLUNA ESQUERDA: Form + Infos -->
                 <div class="contato-left-col">
-                    <!-- FORMULÁRIO -->
-                    <div class="contato-form-wrapper">
-                        <form action="https://formsubmit.co/crv.solucoesti@gmail.com" method="POST" id="contatoForm">
-                            <!-- Configurações FormSubmit -->
-                            <input type="hidden" name="_subject" value="Novo contato - CRV Soluções em TI">
-                            <input type="hidden" name="_captcha" value="false">
-                            <input type="hidden" name="_template" value="table">
 
-                            <div class="form-row">
-                                <div class="form-group">
-                                    <input type="text" id="nome" name="Nome" class="field field--soft" placeholder="Nome completo" required>
-                                </div>
-                                <div class="form-group">
-                                    <input type="tel" id="telefone" name="Telefone" class="field field--soft" placeholder="(00) 00000-0000" required>
-                                </div>
-                            </div>
+               <!-- FORMULÁRIO -->
+<div class="contato-form-wrapper">
+    <form action="https://formspree.io/f/xnjzlgdb" method="POST" id="contatoForm">
+        <!-- Configurações Formspree -->
+        <input type="hidden" name="_subject" value="Novo contato - CRV Soluções em TI">
 
-                            <div class="form-row">
-                                <div class="form-group">
-                                    <input type="email" id="email" name="Email" class="field field--soft" placeholder="seu@email.com" required>
-                                </div>
-                                <div class="form-group">
-                                    <input type="text" id="assunto" name="Assunto" class="field field--soft" placeholder="Assunto" required>
-                                </div>
-                            </div>
+        <!-- Mensagem com padrão + conteúdo do usuário -->
+        <input type="hidden" name="_format" value="plain">
 
-                            <div class="form-group">
-                                <textarea id="mensagem" name="Mensagem" class="field field--soft" placeholder="Escreva sua mensagem aqui..." required></textarea>
-                            </div>
+        <div class="form-row">
+            <div class="form-group">
+                <input type="text" id="nome" name="Nome" class="field field--soft" placeholder="Nome completo" required>
+            </div>
+            <div class="form-group">
+                <input type="tel" id="telefone" name="Telefone" class="field field--soft" placeholder="(00) 00000-0000" required>
+            </div>
+        </div>
 
-                            <button type="submit" class="btn-cta btn-submit">
-                                <i class="fas fa-paper-plane"></i>
-                                Enviar Mensagem
-                            </button>
-                        </form>
-                    </div>
+        <div class="form-row">
+            <div class="form-group">
+                <input type="email" id="email" name="Email" class="field field--soft" placeholder="seu@email.com" required>
+            </div>
+            <div class="form-group">
+                <input type="text" id="assunto" name="Assunto" class="field field--soft" placeholder="Assunto" required>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <textarea id="mensagem" name="Mensagem" class="field field--soft" placeholder="Escreva sua mensagem aqui..." required></textarea>
+        </div>
+
+        <button type="submit" class="btn-cta btn-submit">
+            <i class="fas fa-paper-plane"></i>
+            Enviar Mensagem
+        </button>
+    </form>
+</div>
 
                     <!-- INFORMAÇÕES ABAIXO DO FORM -->
                     <div class="info-boxes">
