--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
                 <h2 class="section-title">Entre em Contato</h2>
                 <div class="title-underline"></div>
                 <p class="section-subtitle">
-                    Dúvidas, sugestões ou interesse em nossos serviços? Envie sua mensagem ou entre em contato.
+                    Dúvidas, sugestões ou interesse em nossos serviços? Envie sua mensagem ou entre em contato pelo whatsapp.
                 </p>
             </div>
 
